--- a/src/app/auth/signup/styles/SignUpForm.module.css
+++ b/src/app/auth/signup/styles/SignUpForm.module.css
@@ -21,9 +21,8 @@
 }
 
 .optionalTitle {
-  font-size: large;
-  padding: 0.5rem;
-  margin: 0.5rem 0;
+  font-size: medium;
+  margin-bottom: 0.8rem;
 }
 
 .signUptitle {
