--- a/src/app/auth/common/styles/AuthFormInput.module.css
+++ b/src/app/auth/common/styles/AuthFormInput.module.css
@@ -93,7 +93,7 @@
 }
 
 .errorMessage {
-  @apply text-red-500;
+  @apply text-red-500 bg-main-blue-950;
   font-size: 0.8rem;
   position: absolute;
   right: 0.75rem;
@@ -109,7 +109,6 @@
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   line-height: 1.2;
-  background-color: rgb(2, 6, 23);
   padding: 0 0.25rem;
   border-radius: 4px;
 }
