--- a/src/app/dashboard/styles/page.module.css
+++ b/src/app/dashboard/styles/page.module.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
+  align-self: center;
   height: 90%;
   width: 100%;
 }
@@ -10,8 +11,8 @@
 .balancesContainer {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
-  width: 100%;
+  justify-content: flex-start;
+  width: 80%;
   margin-top: 2rem;
   gap: 2rem;
   flex-wrap: wrap;
@@ -32,5 +33,9 @@
 @media (max-width: 1200px) {
   .container {
     height: 100%;
-  }  
+  }
+
+  .balancesContainer {
+    margin-top: 4rem;
+  }
 }
